--- a/Source/Enter.UI/Styles/components/_ent_tab.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_tab.component.scss
@@ -24,8 +24,8 @@
     padding: var(--ent-tab-space-y) calc(var(--ent-tab-space-x) - var(--ent-tab-border-width)) calc(var(--ent-tab-space-y) - var(--ent-tab-border-width)) var(--ent-tab-space-x);
     display: flex;
     gap: var(--ent-tab-space-b);
-    font-size: var(--ent-tab-item-font-size);
-    line-height: var(--ent-tab-item-line-height);
+    font-size: var(--ent-typo-font-size-md);
+    line-height: var(--ent-typo-line-height-md);
     text-wrap: nowrap;
     justify-content: center;
     align-items: center;
@@ -57,7 +57,11 @@
     box-shadow: var(--ent-tab-box-shadow);
 
     > * {
-      padding: var(--ent-size-xxs);
+      padding:
+              var(--ent-space-2)
+              calc(var(--ent-space-3) - var(--ent-tab-border-width))
+              calc(var(--ent-space-2) - var(--ent-tab-border-width))
+              calc(var(--ent-space-3) - var(--ent-tab-border-width));
       margin: 0;
     }
   }
@@ -129,6 +133,11 @@
 
       > .ent-tab-content {
         display: flex;
+        padding:
+                calc(var(--ent-space-2) - var(--ent-tab-border-width))
+                calc(var(--ent-space-3) - var(--ent-tab-border-width))
+                calc(var(--ent-space-2) - var(--ent-tab-border-width))
+        calc(var(--ent-space-3) - var(--ent-tab-border-width));
 
         span {
           flex: 1;
@@ -151,11 +160,13 @@
         > .ent-tab-item {
 
           > .ent-tab-content {
-            padding: var(--ent-tab-space-y) calc(var(--ent-tab-space-x) - var(--ent-tab-border-width)) calc(var(--ent-tab-space-y) - var(--ent-tab-border-width)) var(--ent-tab-space-x);
+            padding: 
+                    calc(var(--ent-space-2) - var(--ent-tab-border-width)) 
+                    calc(var(--ent-space-3) - var(--ent-tab-border-width))
+                    calc(var(--ent-space-2) - var(--ent-tab-border-width))
+                    var(--ent-space-3);
             display: flex;
             flex-direction: row;
-            font-size: var(--ent-tab-item-font-size);
-            line-height: var(--ent-tab-item-line-height);
             justify-content: start;
             align-items: center;
             border-top: var(--ent-tab-border-width) var(--ent-tab-border-style) var(--ent-tab-border-color);
@@ -197,7 +208,11 @@
   }
 
   > .ent-tab-item-container-message {
-    padding: var(--ent-tab-space-y) calc(var(--ent-tab-space-x) - var(--ent-tab-border-width)) calc(var(--ent-tab-space-y) - var(--ent-tab-border-width)) var(--ent-tab-space-x);
+    padding: 
+            var(--ent-tab-space-y) 
+            calc(var(--ent-tab-space-x) - var(--ent-tab-border-width)) 
+            calc(var(--ent-tab-space-y) - var(--ent-tab-border-width)) 
+            var(--ent-tab-space-x);
 
     writing-mode: sideways-rl;
 
