--- a/example/Enter.Dashboard/wwwroot/css/app.css
+++ b/example/Enter.Dashboard/wwwroot/css/app.css
@@ -4,10 +4,14 @@ body, html {
     height: 100%;
     font-family: Shabnam, serif;
     font-size: 14px !important;
+    display: flex;
+    flex-direction: column;
 }
 
 #app {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 #blazor-error-ui {
